gallery section added

--- a/index.html
+++ b/index.html
@@ -618,15 +618,59 @@
             </div>
         </div>
     </section>
+
+    <section class="gallery container">
+        <h2 class="gallery-heading">
+            Gallery of best images
+        </h2>
+        <div class="grid">
+            <div class="grid-item"><img class="grid-img" src="images/gallery-img1.png" alt="image"></div>
+            <div class="grid-item"><img class="grid-img" src="images/gallery-img2.png" alt="image"></div>
+            <div class="grid-item"><img class="grid-img" src="images/gallery-img3.png" alt="image"></div>
+            <div class="grid-item"><img class="grid-img" src="images/gallery-img17.png" alt="image"></div>
+            <div class="grid-item"><img class="grid-img" src="images/gallery-img5.png" alt="image"></div>
+            <div class="grid-item"><img class="grid-img" src="images/gallery-img18.png" alt="image"></div>
+            <div class="grid-item"><img class="grid-img" src="images/gallery-img7.png" alt="image"></div>
+            <div class="grid-item"><img class="grid-img" src="images/gallery-img8.png" alt="image"></div>
+            <div class="grid-item">
+                <div class="grid2">
+                    <img class="grid2-img" src="images/grid2-img1.png" alt="image">
+                    <img class="grid2-img" src="images/grid2-img1.png" alt="image">
+                </div>
+                <div class="grid3">
+                    <img class="grid3-img" src="images/grid3-img1.png" alt="image">
+                    <img class="grid3-img" src="images/grid3-img2.png" alt="image">
+                    <img class="grid3-img" src="images/grid3-img3.png" alt="image">
+                    <img class="grid3-img" src="images/gallery-img15.png" alt="image">
+                    <img class="grid3-img" src="images/grid3-img5.png" alt="image">
+                    <img class="grid3-img" src="images/grid3-img6.png" alt="image">
+                    <img class="grid3-img" src="images/grid3-img7.png" alt="image">
+                    <img class="grid3-img" src="images/grid3-img8.png" alt="image">
+                    <img class="grid3-img" src="images/gallery-img16.png" alt="image">
+                </div>
+            </div>
+            <div class="grid-item inactive-gallery-item"><img class="grid-img" src="images/gallery-img9.png" alt="image"></div>
+            <div class="grid-item inactive-gallery-item"><img class="grid-img" src="images/gallery-img10.png" alt="image"></div>
+            <div class="grid-item inactive-gallery-item"><img class="grid-img" src="images/gallery-img11.png" alt="image"></div>
+            <div class="grid-item inactive-gallery-item"><img class="grid-img" src="images/gallery-img12.png" alt="image"></div>
+            <div class="grid-item inactive-gallery-item"><img class="grid-img" src="images/gallery-img13.png" alt="image"></div>
+            <div class="grid-item inactive-gallery-item"><img class="grid-img" src="images/gallery-img14.png" alt="image"></div>
+        </div>
+        <button class="gallery-load-more-btn"> <span class="plus-icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="17" viewBox="0 0 16 17" fill="none">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M15.5 6.99735H9.99996V1.49787C9.99996 1.22194 9.77611 0.997242 9.49998 0.997242H6.4999C6.22387 0.997242 5.99991 1.22194 5.99991 1.49787V6.99735H0.499994C0.223838 6.99735 7.98702e-06 7.22206 7.98702e-06 7.4984V10.4976C7.98702e-06 10.7731 0.223838 10.9974 0.499994 10.9974H5.99991V16.4977C5.99991 16.7732 6.22387 16.998 6.4999 16.998H9.49998C9.77611 16.998 9.99996 16.7732 9.99996 16.4977V10.9974H15.5C15.776 10.9974 16 10.7731 16 10.4976V7.4984C16 7.22206 15.776 6.99735 15.5 6.99735Z" fill="white"/>
+            </svg></span>load more</button>
+    </section>
+
     <footer class="footer">
         <div class="container">
             <div class="copyright">
-                <p class="copyright-company">Copyright 2015 <span   class="green-text">theHam</span></p>
+                <p class="copyright-company">Copyright 2015 &nbsp<span class="green-text">theHam</span></p>
                 <p class="copyright-reserved">All rights reserved</p>
             </div> 
         </div>
     </footer>
     <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/masonry.pkgd.min.js"></script>
     <script src="slick-1.8.1/slick/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
