gallery section fixed

--- a/index.html
+++ b/index.html
@@ -634,8 +634,8 @@
             <div class="grid-item"><img class="grid-img" src="images/gallery-img8.png" alt="image"></div>
             <div class="grid-item">
                 <div class="grid2">
-                    <img class="grid2-img" src="images/grid2-img1.png" alt="image">
-                    <img class="grid2-img" src="images/grid2-img1.png" alt="image">
+                    <img class="grid2-img" src="images/gallery-img19.png" alt="image">
+                    <img class="grid2-img" src="images/gallery-img21png.png" alt="image">
                 </div>
                 <div class="grid3">
                     <img class="grid3-img" src="images/grid3-img1.png" alt="image">
