footer link added

--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@
     <footer class="footer">
         <div class="container">
             <div class="copyright">
-                <p class="copyright-company">Copyright 2015 &nbsp<span class="green-text">theHam</span></p>
+                <p class="copyright-company">Copyright 2015 &nbsp<span class="green-text"><a href="#">theHam</a></span></p>
                 <p class="copyright-reserved">All rights reserved</p>
             </div> 
         </div>
